--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="{% static 'yonseilogo.png' %}">
+  <meta property="og:url" content="https://congressionyonsei.pythonanywhere.com/">
+  <meta property="og:title" content="Congression Yonsei">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="{%static 'congressionThumb.jpg'%}">
+  <meta property="og:description" content="공간 내 혼잡도 측정 IoT 서비스">
   <title>혼잡도</title>
   <style>
     .header_mob {
