--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="{%static 'congressionThumb.jpg'%}">
   <meta property="og:description" content="공간 내 혼잡도 측정 IoT 서비스">
-  <title>혼잡도</title>
+  <title>Congression Yonsei</title>
   <style>
     .header_mob {
         height: 60px;
