--- a/iot_app/templates/congression.html
+++ b/iot_app/templates/congression.html
@@ -293,8 +293,8 @@
                 let year = today.getFullYear(); // 년도
                 let month = today.getMonth() + 1;  // 월
                 let date = today.getDate();  // 날짜
-                document.getElementById("todayGraph").src = "/static/"+year+month+date+".png";
-
+                // document.getElementById("todayGraph").src = "/static/"+year+month+date+".png";
+                document.getElementById("todayGraph").src = "/static/example.png";
             }
 
             function ChnImg(){
