--- a/iot_app/templates/home.html
+++ b/iot_app/templates/home.html
@@ -14,7 +14,7 @@
     }
 </style>
     <div style="display:flex; flex-direction:column">
-        <a href="{% url 'congression' %}" id="img" >
+        <a href="{% url 'congestion' %}" id="img" >
             <img src="{% static '한경관1.png' %}" width="270" height="180">
         </a>
         <img src="{% static '부를샘1.png' %}" id="img" width="270" height="180">
